add converter for forecast service response.
